feat: nieuwe antwoorden toegevoegd 2.3

--- a/SEM4/WC's/Week 2/Practicum_2.3_Opdrachten.ipynb
+++ b/SEM4/WC's/Week 2/Practicum_2.3_Opdrachten.ipynb
@@ -24,24 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/2t/drg3blgd02509hsf2q_hwn1m0000gn/T/ipykernel_27441/4081858790.py:1: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -473,15 +458,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merge1"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -553,62 +529,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RETURN_DESCRIPTION_EN</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Unsatisfactory product</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Wrong product shipped</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Wrong product ordered</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    RETURN_DESCRIPTION_EN\n",
-       "0  Unsatisfactory product\n",
-       "2   Wrong product shipped\n",
-       "3   Wrong product ordered"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "v4 = pd.merge(returned_item, order_details, left_on='ORDER_DETAIL_CODE', how='inner', right_on='ORDER_DETAIL_CODE')\n",
     "v5 = pd.merge(v4, return_reason, left_on='RETURN_REASON_CODE', how='inner', right_on='RETURN_REASON_CODE')\n",
@@ -637,7 +560,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "v6 = pd.merge(product, product_type, left_on='PRODUCT_TYPE_CODE', how='inner', right_on='PRODUCT_TYPE_CODE')\n",
+    "df6 = v6.groupby(v6['PRODUCT_TYPE_EN'], as_index=False)['PRODUCT_LINE_CODE'].count()\n",
+    "df6.rename(columns={\"PRODUCT_LINE_CODE\": \"count\"})"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -651,7 +578,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "v7 = pd.merge(retailer_site, country, left_on=\"COUNTRY_CODE\", how=\"inner\", right_on=\"COUNTRY_CODE\")\n",
+    "df7 = v7.groupby(v7['COUNTRY'], as_index=False)['COUNTRY_CODE'].count()\n",
+    "df7.rename(columns={\"COUNTRY_CODE\": \"count\"})"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -665,7 +596,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "v8 = pd.merge(product, product_type, left_on='PRODUCT_TYPE_CODE', right_on='PRODUCT_TYPE_CODE', how='inner')\n",
+    "v9 = pd.merge(v8, order_details, left_on=\"PRODUCT_NUMBER\", how=\"inner\", right_on=\"PRODUCT_NUMBER\")\n",
+    "\n",
+    "v9.groupby(['PRODUCT_NAME','QUANTITY'], as_index=False).agg(\n",
+    "    avg_price=('UNIT_COST', 'mean'),\n",
+    "\n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -679,7 +618,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df1 = pd.merge(sales_staff, sales_branch, left_on='SALES_BRANCH_CODE', how='inner', right_on='SALES_BRANCH_CODE')\n",
+    "df2 = pd.merge(df1, order_header, right_on='SALES_STAFF_CODE', left_on='SALES_STAFF_CODE', how='inner')\n",
+    "filter_ams = (df2['CITY'] == 'Amsterdam')# & (df2['ORDER_DATE'].str.contains('2016'))\n",
+    "df2.loc[filter_ams, ['FIRST_NAME', 'LAST_NAME']].drop_duplicates()"
+   ]
   },
   {
    "cell_type": "markdown",
