--- a/SEM4/WC's/Week 2/Practicum_2.1_Opdrachten.ipynb
+++ b/SEM4/WC's/Week 2/Practicum_2.1_Opdrachten.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,19 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "geef me je geld\n",
-      "of ik gebruik geweld,\n",
-      "toen kwam de controle aangesneld\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('geef me je geld\\nof ik gebruik geweld,\\ntoen kwam de controle aangesneld')"
    ]
@@ -89,18 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Apenhoofd\n",
-      "Paardenstaart\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "aap = 'Apenhoofd'\n",
     "paard = 'Paardenstaart'\n",
@@ -122,18 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A, B, C, D, E, F, G\n",
-      "Het is inderdaad: B\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('A, B, C, D, E, F, G')\n",
     "gekozen_letter = input('Kies een letter')\n",
@@ -161,13 +133,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    inkomen = int(input('Voer uw inkomen in:'))\n",
-    "except ValueError:\n",
-    "    print('U heeft geen getal ingevoerd!')\n",
+    "inkomen = int(input('Voer uw inkomen in:'))\n",
     "\n",
-    "print(f'Uw inkomen {inkomen} is zeer acceptabel.')\n",
-    "\n"
+    "print(f'Uw inkomen {inkomen} is zeer acceptabel.')"
    ]
   },
   {
@@ -185,17 +153,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "De oppervalkte van de driekhoek is 450.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "basis = int(input('Wat is de basis?'))\n",
     "hoogte = int(input('Wat is de hoogte?'))\n",
@@ -227,17 +187,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waarom neem je nog je ouders mee?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "leeftijd = int(input('Hoe oud ben je?'))\n",
     "ouders_mee = input('Ouders mee? J/N')\n",
@@ -287,17 +239,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ongelijk\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def wachtwoord(een: str, twee: str):\n",
     "    if een.lower() == twee.lower():\n",
@@ -341,20 +285,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fout, probeer het opnieuw!\n",
-      "Fout, probeer het opnieuw!\n",
-      "Fout, probeer het opnieuw!\n",
-      "Succes!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def wachtwoord():\n",
     "    ww1 = input('ww1')\n",
@@ -382,56 +315,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 x 1 = 1\n",
-      "2 x 1 = 2\n",
-      "3 x 1 = 3\n",
-      "4 x 1 = 4\n",
-      "5 x 1 = 5\n",
-      "6 x 1 = 6\n",
-      "7 x 1 = 7\n",
-      "8 x 1 = 8\n",
-      "9 x 1 = 9\n",
-      "10 x 1 = 10\n",
-      "1 x 2 = 2\n",
-      "2 x 2 = 4\n",
-      "3 x 2 = 6\n",
-      "4 x 2 = 8\n",
-      "5 x 2 = 10\n",
-      "6 x 2 = 12\n",
-      "7 x 2 = 14\n",
-      "8 x 2 = 16\n",
-      "9 x 2 = 18\n",
-      "10 x 2 = 20\n",
-      "1 x 3 = 3\n",
-      "2 x 3 = 6\n",
-      "3 x 3 = 9\n",
-      "4 x 3 = 12\n",
-      "5 x 3 = 15\n",
-      "6 x 3 = 18\n",
-      "7 x 3 = 21\n",
-      "8 x 3 = 24\n",
-      "9 x 3 = 27\n",
-      "10 x 3 = 30\n",
-      "1 x 4 = 4\n",
-      "2 x 4 = 8\n",
-      "3 x 4 = 12\n",
-      "4 x 4 = 16\n",
-      "5 x 4 = 20\n",
-      "6 x 4 = 24\n",
-      "7 x 4 = 28\n",
-      "8 x 4 = 32\n",
-      "9 x 4 = 36\n",
-      "10 x 4 = 40\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def tafel(getal: int):\n",
     "    teller: int = 1\n",
@@ -466,27 +352,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "huidige getal: 0\n",
-      "huidige getal: 1\n",
-      "huidige getal: 2\n",
-      "huidige getal: 3\n",
-      "huidige getal: 4\n",
-      "huidige getal: 5\n",
-      "huidige getal: 6\n",
-      "huidige getal: 7\n",
-      "huidige getal: 8\n",
-      "huidige getal: 9\n",
-      "huidige getal: 10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def loopje():\n",
     "    aantal = 0\n",
@@ -507,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,38 +413,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Levi's\n",
-      "32\n",
-      "320\n",
-      "jeans\n",
-      "Gucci\n",
-      "34\n",
-      "240\n",
-      "lang mouw\n",
-      "H&M\n",
-      "35\n",
-      "350\n",
-      "spijker\n",
-      "blauw\n",
-      "Ralph Lauren\n",
-      "32\n",
-      "320\n",
-      "lelijk\n",
-      "omhoog\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Kledingstuk:\n",
     "    def __init__(self, merk: str, maat: int, prijs: int):\n",
@@ -669,16 +508,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mijn_lijst = ['Jelle', 'Marleen', 'Henk', 'Fatima', 'Jelle', 'Henk']"
    ]
@@ -692,17 +522,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pepijn\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mijn_lijst = ['Jelle', 'Marleen', 'Henk', 'Fatima', 'Jelle', 'Henk']\n",
     "\n",
@@ -735,21 +557,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'tuple' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[38], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m mijn_tupel \u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJelle\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMarleen\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHenk\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFatima\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJelle\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHenk\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[43mmijn_tupel\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPepijn\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m (mijn_tupel[\u001b[38;5;241m0\u001b[39m])\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mijn_tupel = ('Jelle', 'Marleen', 'Henk', 'Fatima', 'Jelle', 'Henk')\n",
     "\n",
@@ -793,17 +603,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pepijn\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mijn_dict = {\n",
     "    'naam': 'Jelle',\n",
