feat: alle andere dingen toegevoegd

--- a/SEM4/WC's/Week 4 en 5/Practicum_4.3.ipynb
+++ b/SEM4/WC's/Week 4 en 5/Practicum_4.3.ipynb
@@ -72,20 +72,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import sqlite3\n",
-    "import pypyodbc\n",
+    "#import pypyodbc\n",
     "\n",
-    "go_sales = sqlite3.connect(\"C:\\\\Users\\\\Nick Frietman\\\\Desktop\\\\HC1\\\\go_sales.sqlite\")\n",
-    "go_staff = sqlite3.connect(\"C:\\\\Users\\\\Nick Frietman\\\\Desktop\\\\HC1\\\\go_staff.sqlite\")\n",
-    "go_crm = sqlite3.connect(\"C:\\\\Users\\\\Nick Frietman\\\\Desktop\\\\HC1\\\\go_crm.sqlite\")\n",
-    "inventory_forecast = pd.read_csv(\"C:\\\\Users\\\\Nick Frietman\\\\Desktop\\\\HC1\\\\GO_SALES_INVENTORY_LEVELSData.csv\")\n",
-    "product_forecast = pd.read_csv(\"C:\\\\Users\\\\Nick Frietman\\\\Desktop\\\\HC1\\\\GO_SALES_PRODUCT_FORECASTData.csv\")\n",
+    "go_sales = sqlite3.connect(\"/Users/pep/Downloads/Great_Outdoors_Data_SQLite/go_sales.sqlite\")\n",
+    "go_staff = sqlite3.connect(\"/Users/pep/Downloads/Great_Outdoors_Data_SQLite/go_staff.sqlite\")\n",
+    "go_crm = sqlite3.connect(\"/Users/pep/Downloads/Great_Outdoors_Data_SQLite/go_crm.sqlite\")\n",
+    "inventory_forecast = pd.read_csv(\"/Users/pep/Downloads/Great_Outdoors_Data_SQLite/GO_SALES_INVENTORY_LEVELSData.csv\")\n",
+    "product_forecast = pd.read_csv(\"/Users/pep/Downloads/Great_Outdoors_Data_SQLite/GO_SALES_PRODUCT_FORECASTData.csv\")\n",
     "g = go_sales.cursor()\n",
     "h = go_crm.cursor()\n",
     "i = go_staff.cursor()\n",
@@ -121,7 +121,7 @@
     "retailer_type = pd.read_sql_query(\"SELECT * FROM retailer_type\", go_crm)\n",
     "sales_demographic = pd.read_sql_query(\"SELECT * FROM sales_demographic\", go_crm)\n",
     "retailer_segment = pd.read_sql_query(\"SELECT * FROM retailer_segment\", go_crm)\n",
-    "age_group = pd.read_sql_query(\"SELECT * FROM age_group\", go_crm)\n"
+    "age_group = pd.read_sql_query(\"SELECT * FROM age_group\", go_crm)"
    ]
   },
   {
@@ -653,13 +653,14 @@
     "\n",
     "for index, row in order_data.iterrows():\n",
     "    try:\n",
-    "        query = f\"INSERT INTO ORDER_DATA VALUES ({row['ORDER_NUMBER']}, '{row['RETAILER_NAME']}', {row['RETAILER_SITE_CODE']}, {row['RETAILER_CONTACT_CODE']}, {row['SALES_STAFF_CODE']}, {row['SALES_BRANCH_CODE']}, '{row['ORDER_DATE']}', {row['ORDER_METHOD_CODE']}, '{row['ORDER_DETAIL_CODE']}', '{row['QUANTITY']}', '{row['UNIT_COST']}', '{row['UNIT_PRICE']}', '{row['UNIT_SALE_PRICE']}', '{row['RETURN_CODE']}', '{row['RETURN_DATE']}', '{row['RETURN_REASON_CODE']}', '{row['RETURN_QUANTITY']}')\"\n",
+    "        query = f\"INSERT INTO ORDER_DATA VALUES ({row['ORDER_NUMBER']}, '{row['RETAILER_NAME']}', {row['RETAILER_SITE_CODE']}, {row['RETAILER_CONTACT_CODE']}, {row['SALES_STAFF_CODE']}, {row['SALES_BRANCH_CODE']}, '{row['ORDER_DATE']}', {row['ORDER_METHOD_CODE']}, '{row['ORDER_DETAIL_CODE']}', '{row['PRODUCT_NUMBER']} '{row['QUANTITY']}', '{row['UNIT_COST']}', '{row['UNIT_PRICE']}', '{row['UNIT_SALE_PRICE']}', '{row['RETURN_CODE']}', '{row['RETURN_DATE']}', '{row['RETURN_REASON_CODE']}', '{row['RETURN_QUANTITY']}')\"\n",
     "        cursor.execute(query)\n",
     "    except pypyodbc.Error as e:\n",
     "        print(f\"Error inserting row {index}: {e}\")\n",
     "\n",
     "export_conn.commit()\n",
-    "cursor.close()"
+    "cursor.close()\n",
+    "\n"
    ]
   },
   {
@@ -1032,7 +1033,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.undefined.undefined"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
