--- a/SEM4/WC's/Week 4 en 5/Practicum_4.3.ipynb
+++ b/SEM4/WC's/Week 4 en 5/Practicum_4.3.ipynb
@@ -72,216 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PRODUCT_TYPE_CODE</th>\n",
-       "      <th>PRODUCT_LINE_CODE</th>\n",
-       "      <th>PRODUCT_TYPE_EN</th>\n",
-       "      <th>TRIAL888</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Cooking Gear</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Watches</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>11</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Eyewear</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Knives</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>13</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Binoculars</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>14</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Navigation</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>15</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Insect Repellents</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>16</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Sunscreen</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>17</td>\n",
-       "      <td>4</td>\n",
-       "      <td>First Aid</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>18</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Irons</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>19</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Woods</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Tents</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>20</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Putters</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>21</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Golf Accessories</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Sleeping Bags</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Packs</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Lanterns</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Rope</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Safety</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Climbing Accessories</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Tools</td>\n",
-       "      <td>T</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   PRODUCT_TYPE_CODE PRODUCT_LINE_CODE       PRODUCT_TYPE_EN TRIAL888\n",
-       "0                  1                 1          Cooking Gear        T\n",
-       "1                 10                 3               Watches        T\n",
-       "2                 11                 3               Eyewear        T\n",
-       "3                 12                 3                Knives        T\n",
-       "4                 13                 3            Binoculars        T\n",
-       "5                 14                 3            Navigation        T\n",
-       "6                 15                 4     Insect Repellents        T\n",
-       "7                 16                 4             Sunscreen        T\n",
-       "8                 17                 4             First Aid        T\n",
-       "9                 18                 5                 Irons        T\n",
-       "10                19                 5                 Woods        T\n",
-       "11                 2                 1                 Tents        T\n",
-       "12                20                 5               Putters        T\n",
-       "13                21                 5      Golf Accessories        T\n",
-       "14                 3                 1         Sleeping Bags        T\n",
-       "15                 4                 1                 Packs        T\n",
-       "16                 5                 1              Lanterns        T\n",
-       "17                 6                 2                  Rope        T\n",
-       "18                 7                 2                Safety        T\n",
-       "19                 8                 2  Climbing Accessories        T\n",
-       "20                 9                 2                 Tools        T"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'go_sales' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m inventory_forecast \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/Users/pep/Downloads/Great_Outdoors_Data_SQLite/GO_SALES_INVENTORY_LEVELSData.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     10\u001b[0m product_forecast \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/Users/pep/Downloads/Great_Outdoors_Data_SQLite/GO_SALES_PRODUCT_FORECASTData.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 11\u001b[0m g \u001b[38;5;241m=\u001b[39m \u001b[43mgo_sales\u001b[49m\u001b[38;5;241m.\u001b[39mcursor()\n\u001b[1;32m     12\u001b[0m h \u001b[38;5;241m=\u001b[39m go_crm\u001b[38;5;241m.\u001b[39mcursor()\n\u001b[1;32m     13\u001b[0m i \u001b[38;5;241m=\u001b[39m go_staff\u001b[38;5;241m.\u001b[39mcursor()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'go_sales' is not defined"
+     ]
     }
    ],
    "source": [
