--- a/SEM4/WC's/Week 8/Practicum_8.1.ipynb
+++ b/SEM4/WC's/Week 8/Practicum_8.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "[43063 rows x 14 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
        "[43063 rows x 4 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
        "[3549 rows x 4 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
        "[3548 rows x 9 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,9 +870,410 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_number</th>\n",
+       "      <th>production_cost</th>\n",
+       "      <th>product_type_code</th>\n",
+       "      <th>margin</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>inventory_count</th>\n",
+       "      <th>expected_volume</th>\n",
+       "      <th>month_1</th>\n",
+       "      <th>...</th>\n",
+       "      <th>product_type_code_2</th>\n",
+       "      <th>product_type_code_20</th>\n",
+       "      <th>product_type_code_21</th>\n",
+       "      <th>product_type_code_3</th>\n",
+       "      <th>product_type_code_4</th>\n",
+       "      <th>product_type_code_5</th>\n",
+       "      <th>product_type_code_6</th>\n",
+       "      <th>product_type_code_7</th>\n",
+       "      <th>product_type_code_8</th>\n",
+       "      <th>product_type_code_9</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1790</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>524</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>11</td>\n",
+       "      <td>460</td>\n",
+       "      <td>1829</td>\n",
+       "      <td>390</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>12</td>\n",
+       "      <td>872</td>\n",
+       "      <td>2157</td>\n",
+       "      <td>640</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>2</td>\n",
+       "      <td>344</td>\n",
+       "      <td>2263</td>\n",
+       "      <td>403</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>3</td>\n",
+       "      <td>898</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>750</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3543</th>\n",
+       "      <td>99</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>5</td>\n",
+       "      <td>466</td>\n",
+       "      <td>5163</td>\n",
+       "      <td>519</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3544</th>\n",
+       "      <td>99</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>6</td>\n",
+       "      <td>598</td>\n",
+       "      <td>4565</td>\n",
+       "      <td>701</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3545</th>\n",
+       "      <td>99</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>7</td>\n",
+       "      <td>264</td>\n",
+       "      <td>4301</td>\n",
+       "      <td>327</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3546</th>\n",
+       "      <td>99</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>8</td>\n",
+       "      <td>264</td>\n",
+       "      <td>4037</td>\n",
+       "      <td>299</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3547</th>\n",
+       "      <td>99</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>9</td>\n",
+       "      <td>256</td>\n",
+       "      <td>3781</td>\n",
+       "      <td>241</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3548 rows × 41 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      product_number  production_cost product_type_code  margin  year month  \\\n",
+       "0                  1              4.0                 1    0.33  2020     1   \n",
+       "1                  1              4.0                 1    0.33  2020    11   \n",
+       "2                  1              4.0                 1    0.33  2020    12   \n",
+       "3                  1              4.0                 1    0.33  2020     2   \n",
+       "4                  1              4.0                 1    0.33  2020     3   \n",
+       "...              ...              ...               ...     ...   ...   ...   \n",
+       "3543              99              2.0                17    0.60  2022     5   \n",
+       "3544              99              2.0                17    0.60  2022     6   \n",
+       "3545              99              2.0                17    0.60  2022     7   \n",
+       "3546              99              2.0                17    0.60  2022     8   \n",
+       "3547              99              2.0                17    0.60  2022     9   \n",
+       "\n",
+       "      quantity  inventory_count  expected_volume  month_1  ...  \\\n",
+       "0         1790             2007              524     True  ...   \n",
+       "1          460             1829              390    False  ...   \n",
+       "2          872             2157              640    False  ...   \n",
+       "3          344             2263              403    False  ...   \n",
+       "4          898             1965              750    False  ...   \n",
+       "...        ...              ...              ...      ...  ...   \n",
+       "3543       466             5163              519    False  ...   \n",
+       "3544       598             4565              701    False  ...   \n",
+       "3545       264             4301              327    False  ...   \n",
+       "3546       264             4037              299    False  ...   \n",
+       "3547       256             3781              241    False  ...   \n",
+       "\n",
+       "      product_type_code_2  product_type_code_20  product_type_code_21  \\\n",
+       "0                   False                 False                 False   \n",
+       "1                   False                 False                 False   \n",
+       "2                   False                 False                 False   \n",
+       "3                   False                 False                 False   \n",
+       "4                   False                 False                 False   \n",
+       "...                   ...                   ...                   ...   \n",
+       "3543                False                 False                 False   \n",
+       "3544                False                 False                 False   \n",
+       "3545                False                 False                 False   \n",
+       "3546                False                 False                 False   \n",
+       "3547                False                 False                 False   \n",
+       "\n",
+       "      product_type_code_3  product_type_code_4  product_type_code_5  \\\n",
+       "0                   False                False                False   \n",
+       "1                   False                False                False   \n",
+       "2                   False                False                False   \n",
+       "3                   False                False                False   \n",
+       "4                   False                False                False   \n",
+       "...                   ...                  ...                  ...   \n",
+       "3543                False                False                False   \n",
+       "3544                False                False                False   \n",
+       "3545                False                False                False   \n",
+       "3546                False                False                False   \n",
+       "3547                False                False                False   \n",
+       "\n",
+       "      product_type_code_6  product_type_code_7  product_type_code_8  \\\n",
+       "0                   False                False                False   \n",
+       "1                   False                False                False   \n",
+       "2                   False                False                False   \n",
+       "3                   False                False                False   \n",
+       "4                   False                False                False   \n",
+       "...                   ...                  ...                  ...   \n",
+       "3543                False                False                False   \n",
+       "3544                False                False                False   \n",
+       "3545                False                False                False   \n",
+       "3546                False                False                False   \n",
+       "3547                False                False                False   \n",
+       "\n",
+       "      product_type_code_9  \n",
+       "0                   False  \n",
+       "1                   False  \n",
+       "2                   False  \n",
+       "3                   False  \n",
+       "4                   False  \n",
+       "...                   ...  \n",
+       "3543                False  \n",
+       "3544                False  \n",
+       "3545                False  \n",
+       "3546                False  \n",
+       "3547                False  \n",
+       "\n",
+       "[3548 rows x 41 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['MONTH'] = df['MONTH'].astype(str)\n",
     "month_dummies = pd.get_dummies(df.loc[:,['MONTH']])\n",
@@ -889,12 +1290,13 @@
     "\n",
     "df.drop(['PRODUCT_NUMBER'], axis=1)\n",
     "\n",
-    "df = df.rename(columns=str.lower)"
+    "df = df.rename(columns=str.lower)\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1293,7 +1695,7 @@
        "[3548 rows x 40 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
